--- a/lang/fr.json
+++ b/lang/fr.json
@@ -45,6 +45,7 @@
   "COC.ui.activecaps" : "Capacités actives",
   "COC.ui.spell" : "Sort",
   "COC.ui.spellcasting" : "Incantation",
+  "COC.ui.sc" : "INCANT",
   "COC.ui.limited" : "Action limitée",
   "COC.ui.summary" : "Résumé",
   "COC.ui.description" : "Description",
@@ -74,7 +75,7 @@
   "COC.ui.unequip" : "Déséquiper",
   "COC.ui.equiped" : "Équipé",
   "COC.ui.unequied" : "Non équipé",
-  "COC.ui.properties" :  "Propiétés",
+  "COC.ui.properties" :  "Propriétés",
   "COC.ui.equipment" :  "Équipement",
   "COC.ui.equipable" :  "Équipable",
   "COC.ui.stackable" : "Empilable",
