--- a/lang/fr.json
+++ b/lang/fr.json
@@ -227,6 +227,81 @@
   "COC.slot.feet" : "Pieds",
   "COC.slot.belt" : "À la ceinture",
   "COC.slot.backpack" : "Sac-à-dos",
-  "COC.slot.quiver" : "Carquois"
+  "COC.slot.quiver" : "Carquois",
 
+  "COC.category.item": "Objet",
+  "COC.category.armor": "Armure",
+  "COC.category.melee": "Arme de contact",
+  "COC.category.ranged": "Arme à distance",
+  "COC.category.trapping": "Equipement",
+  "COC.category.path": "Voie",
+  "COC.category.capacity": "Capacité",
+  "COC.category.profile": "Profil",
+  "COC.category.spell": "Sort",
+  "COC.category.jewel": "Bijou",
+  "COC.category.ammunition": "Munition",
+  "COC.category.container" : "Contenant",
+  "COC.category.vehicle" : "Véhicule",
+  "COC.category.other": "Autre",
+
+
+  "COC.rarity.common" : "Commun",
+  "COC.rarity.moderate" : "Modéré",
+  "COC.rarity.rare" : "Rare",
+  "COC.rarity.very-rare" : "Très rare",
+  "COC.rarity.unique" : "Unique",
+
+  "COC.ui.slot" : "Emplacement",
+  "COC.slot.hand":  "Main",
+  "COC.slot.head" : "Tête",
+  "COC.slot.ear" : "Oreille",
+  "COC.slot.neck" : "Cou",
+  "COC.slot.shoulders" : "Épaules",
+  "COC.slot.chest" : "Torse",
+  "COC.slot.back" : "Dos",
+  "COC.slot.arm" : "Bras",
+  "COC.slot.finger" : "Doigt",
+  "COC.slot.wrist" : "Poignet",
+  "COC.slot.waist" : "Taille",
+  "COC.slot.legs" : "Jambes",
+  "COC.slot.feet" : "Pieds",
+  "COC.slot.belt" : "À la ceinture",
+  "COC.slot.backpack" : "Sac-à-dos",
+  "COC.slot.quiver" : "Carquois",
+
+
+  "COC.properties.equipable" : "Équipable",
+  "COC.properties.activable" : "Activable",
+  "COC.properties.stackable" : "Empilable",
+  "COC.properties.unique" : "Unique",
+  "COC.properties.tailored" : "Sur-mesure",
+  "COC.properties.2H" : "À deux main",
+  "COC.properties.predilection" : "Arme de prédilection",
+  "COC.properties.ranged" : "À distance",
+  "COC.properties.proficient" : "Maîtrise",
+  "COC.properties.finesse" : "Finesse",
+  "COC.properties.equipment" : "Équipement",
+  "COC.properties.weapon" : "Arme",
+  "COC.properties.protection" : "Protection",
+  "COC.properties.reloadable" : "Rechargeable",
+  "COC.properties.bow" : "Arc",
+  "COC.properties.crossbow" : "Arbalète",
+  "COC.properties.powder" : "Arme à poudre",
+  "COC.properties.throwing" : "Arme de lancer",
+  "COC.properties.dr" : "Résistance aux dommages",
+  "COC.properties.sneak" : "Attaque sournoise",
+  "COC.properties.powerful" : "Attaque en puissance",
+  "COC.properties.critscience" : "Science du critique",
+  "COC.properties.specialization" : "Spécialisation",
+  "COC.properties.effects" : "Effect persistant",
+  "COC.properties.13strmin" : "13 en FOR minimum",
+  "COC.properties.bashing" : "DM temporaires possibles",
+  "COC.properties.sling" : "Fronde",
+  "COC.properties.spell" : "Sort",
+
+  "COC.properties.profile" : "Profil",
+  "COC.properties.prestige" : "Prestige",
+  "COC.properties.alternative" : "Alternative",
+  "COC.properties.racial" : "Raciale",
+  "COC.properties.creature" : "Créature"
 }
