ajout des compendiums

--- a/lang/en.json
+++ b/lang/en.json
@@ -36,7 +36,6 @@
   "COC.ui.rank" : "Rank",
   "COC.ui.scope" : "Scope",
   "COC.ui.profile" : "Profile",
-  "COC.ui.species" : "Species",
   "COC.ui.creature" : "Creature",
   "COC.ui.prestige" : "Prestige",
   "COC.ui.alternative" : "Alternative",
@@ -101,7 +100,6 @@
   "COC.details.class": "Class",
   "COC.details.avatar": "Avatar",
   "COC.details.profile": "Profile",
-  "COC.details.species": "Species",
   "COC.details.gender": "Gender",
   "COC.details.age": "Age",
   "COC.details.height": "Height",
@@ -219,8 +217,8 @@
   "COC.category.path": "Path",
   "COC.category.capacity": "Capacity",
   "COC.category.profile": "Profile",
-  "COC.category.species": "Species",
   "COC.category.spell": "Spell",
+  "COC.category.trait": "Trait",
   "COC.category.jewel": "Jewel",
   "COC.category.ammunition": "Ammunition",
   "COC.category.container" : "Container",
