--- a/lang/fr.json
+++ b/lang/fr.json
@@ -36,7 +36,6 @@
   "COC.ui.rank" : "Rang",
   "COC.ui.scope" : "Application",
   "COC.ui.profile" : "Profil",
-  "COC.ui.species" : "Race",
   "COC.ui.creature" : "Créature",
   "COC.ui.prestige" : "Prestige",
   "COC.ui.alternative" : "Alternative",
@@ -102,7 +101,6 @@
   "COC.details.class": "Classe",
   "COC.details.avatar": "Avatar",
   "COC.details.profile": "Profil",
-  "COC.details.species": "Race",
   "COC.details.gender": "Sexe",
   "COC.details.age": "Age",
   "COC.details.height": "Taille",
@@ -238,6 +236,7 @@
   "COC.category.capacity": "Capacité",
   "COC.category.profile": "Profil",
   "COC.category.spell": "Sort",
+  "COC.category.trait": "Trait",
   "COC.category.jewel": "Bijou",
   "COC.category.ammunition": "Munition",
   "COC.category.container" : "Contenant",
