correction des issues github : #1,#2,#3,#5,#6,#8,#9,#11,#12

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -141,6 +141,7 @@
   "COC.attributes.value.abbrev": "Valeur",
   "COC.attributes.mod.abbrev" : "Mod",
   "COC.attributes.bonus.abbrev" : "Bonus",
+  "COC.attributes.penalty.abbrev" : "Malus",
   "COC.attributes.max.abbrev" : "Max",
 
   "COC.attributes.defence.label": "DEFENSE",
