Item dépliable qui affiche la description

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -256,7 +256,7 @@
   "COC.properties.powder" : "Arme à feu",
   "COC.properties.throwing" : "Arme de lancer",
   "COC.properties.dr" : "Résistance aux dommages",
-  "COC.properties.effects" : "Effect persistant",
+  "COC.properties.effects" : "Effet persistant",
   "COC.properties.13strmin" : "13 en FOR minimum",
   "COC.properties.bashing" : "DM temporaires possibles",
   "COC.properties.spell" : "Sort",
