--- a/lang/en.json
+++ b/lang/en.json
@@ -10,7 +10,7 @@
   "ITEM.TypeTrait": "Trait",
   "ITEM.TypeProfile": "Profile",
   "ITEM.TypePath": "Path",
-  "ITEM.TypeEncounterWeapon": "Weapon",
+  "ITEM.TypeEncounterweapon": "Weapon",
 
   "COC.title": "Chroniques Oubliées Contemporain",
 
