--- a/lang/fr.json
+++ b/lang/fr.json
@@ -10,7 +10,7 @@
   "ITEM.TypeTrait": "Trait",
   "ITEM.TypeProfile": "Profil",
   "ITEM.TypePath": "Voie",
-  "ITEM.TypeEncounterweapon": "Arme",
+  "ITEM.TypeEncounterweapon": "Arme de rencontre",
 
   "COC.title": "Chroniques Oubliées Contemporain",
 
