Ajout des effets

--- a/lang/en.json
+++ b/lang/en.json
@@ -100,12 +100,25 @@
   "COC.ui.stacksize" : "Max quantity",
   "COC.ui.activeCapacities": "Active capacities",
   "COC.ui.CapacityPoints": "Capacity points",
-  "COC.placeholders.stacksize" : "Infinite if empty",
+  "COC.ui.buff" : "Buff",
+  "COC.ui.duration" : "Duration",
+  "COC.ui.heal" : "Heal",
+  "COC.ui.units" : "Units",
+  "COC.ui.rounds" : "Rounds",
+  "COC.ui.hours" : "Hours",
+  "COC.ui.minutes" : "Minutes",
+  "COC.ui.days" : "Days",
+  "COC.ui.random" : "Random",  
   "COC.ui.dr.abbrev": "DR",
   "COC.ui.applyDamage": "Apply damage",
   "COC.ui.applyHalfDamage": "Apply half damage",
   "COC.ui.applyDoubleDamage": "Apply double damage",
   "COC.ui.applyHealing" : "Apply healing",
+  "COC.ui.newEffect" : "New Effect",
+  "COC.notification.noCapacitySelected" : "No capacity has been selected yet",
+  "COC.notification.noPathSelected": "No path have been added yet",
+
+  "COC.placeholders.stacksize" : "Infinite if empty",
 
   "COC.roll.skillcheck" : "Skill check",
   "COC.roll.success" : "Success",
@@ -123,6 +136,8 @@
   "COC.tabs.paths" : "Paths",
   "COC.tabs.capacities" : "Capacities",
   "COC.tabs.inventory" : "Inventory",
+  "COC.tabs.effects" : "Effects",
+  "COC.tabs.details" : "Details",
   "COC.tabs.description" : "Description",
 
   "COC.details.name": "Name",
@@ -252,15 +267,18 @@
   "COC.category.path": "Path",
   "COC.category.capacity": "Capacity",
   "COC.category.profile": "Profile",
+  "COC.category.trait": "Trait",  
   "COC.category.spell": "Spell",
-  "COC.category.encounterWeapon": "Weapon",  
-  "COC.category.trait": "Trait",
+  "COC.category.encounterWeapon": "Encounter Weapon",    
+  "COC.category.currency" : "Currency",
   "COC.category.jewel": "Jewel",
+  "COC.category.consumable": "Consumable",
   "COC.category.ammunition": "Ammunition",
   "COC.category.container" : "Container",
   "COC.category.mount" : "Mount",
   "COC.category.vehicle" : "Vehicle",
-  "COC.category.money" : "Money",
+  
+  "COC.category.effects": "Effect",
   "COC.category.other": "Other",
 
   "COC.rarity.common" : "Common",
@@ -287,7 +305,6 @@
   "COC.slot.backpack" : "Backpack",
   "COC.slot.quiver" : "Quiver",
 
-
   "COC.properties.equipable" : "Equipable",
   "COC.properties.activable" : "Activable",
   "COC.properties.stackable" : "Stackable",
@@ -312,12 +329,16 @@
   "COC.properties.powerful" : "Powerful",
   "COC.properties.critscience" : "Crit Science",
   "COC.properties.specialization" : "Specialization",
-  "COC.properties.effects" : "Effects",
+  "COC.properties.effects" : "Magical effect",
+  "COC.properties.heal" : "Heal",
+  "COC.properties.buff" : "Buff",
+  "COC.properties.temporary" : "Temporary",
+  "COC.properties.persistent" : "Persistent",
+  "COC.properties.spell" : "Spell",
   "COC.properties.13strmin" : "13 STR minimum",
   "COC.properties.bashing" : "Bashing DM possible",
-  "COC.properties.sling" : "Sling",
-  "COC.properties.spell" : "Spell",
   "COC.properties.proneshot" : "DM sup if prone shot",
+  "COC.properties.sling" : "Sling",  
   "COC.properties.salve" : "Salve",
 
   "COC.properties.profile" : "Profile",
@@ -333,9 +354,6 @@
   "COC.setting.espionnage" : "Spy",
   "COC.setting.surhumains" : "Mutants",
   "COC.setting.cyberpunk" : "Cyberpunk",
-
-  "COC.notification.noCapacitySelected" : "No capacity has been selected yet",
-  "COC.notification.noPathSelected": "No path have been added yet",
 
   "COC.notification.MacroMultipleTokensSelected": "You have selected several tokens",
   "COC.notification.MacroNoActorAvailable": "No actor could be targeted",
