--- a/lang/fr.json
+++ b/lang/fr.json
@@ -100,11 +100,23 @@
   "COC.ui.capacities" : "Capacités",
   "COC.ui.activeCapacities": "Capacités actives",
   "COC.ui.CapacityPoints": "Points de capacités",
+  "COC.ui.buff" : "Amélioration",
+  "COC.ui.duration" : "Durée",
+  "COC.ui.heal" : "Soins",
+  "COC.ui.units" : "Unités",
+  "COC.ui.rounds" : "Tours",
+  "COC.ui.hours" : "Heures",
+  "COC.ui.minutes" : "Minutes",
+  "COC.ui.days" : "Jours",
+  "COC.ui.random" : "Aléatoire",  
   "COC.ui.dr.abbrev": "RD",
   "COC.ui.applyDamage": "Appliquer les dégâts",
   "COC.ui.applyHalfDamage": "Appliquer la moitié des dégâts",
   "COC.ui.applyDoubleDamage": "Appliquer le double des dégâts",
   "COC.ui.applyHealing" : "Appliquer les soins",
+  "COC.ui.newEffect" : "Nouvel Effet",
+  "COC.notification.noCapacitySelected" : "Aucune capacité n'a été sélectionnée pour le moment",
+  "COC.notification.noPathSelected": "Aucune voie n'a été ajoutée pour le moment.",
 
   "COC.placeholders.stacksize" : "Quantité infinie si vide",
 
@@ -124,6 +136,8 @@
   "COC.tabs.paths" : "Voies",
   "COC.tabs.capacities" : "Capacités",
   "COC.tabs.inventory" : "Inventaire",
+  "COC.tabs.effects" : "Effets",
+  "COC.tabs.details" : "Détails",  
   "COC.tabs.description" : "Description",
 
   "COC.details.name": "Nom",
@@ -180,6 +194,7 @@
   "COC.attributes.hp.abbrev": "PV",
   "COC.attributes.bg.label": "Blessures graves",
   "COC.attributes.bg.abbrev": "BG",
+
   "COC.attributes.xp.label": "Points de capacité",
   "COC.attributes.xp.abbrev": "CP",
   "COC.attributes.init.label": "Initiative",
@@ -236,20 +251,50 @@
 
   "COC.category.item": "Objet",
   "COC.category.armor": "Armure",
+  "COC.category.shield": "Bouclier",
   "COC.category.melee": "Arme de contact",
   "COC.category.ranged": "Arme à distance",
-  "COC.category.trapping": "Equipement",
+  "COC.category.trapping": "Piège",
   "COC.category.path": "Voie",
   "COC.category.capacity": "Capacité",
   "COC.category.profile": "Profil",
-  "COC.category.spell": "Sort",
   "COC.category.trait": "Trait",
-  "COC.category.encounterWeapon": "Arme",
+  "COC.category.spell": "Sort",
+  "COC.category.encounterWeapon": "Arme de rencontre",
+  "COC.category.currency" : "Monnaie",
+  "COC.category.jewel" : "Pierre précieuse",
+  "COC.category.consumable": "Consommable",
   "COC.category.ammunition": "Munition",
   "COC.category.container" : "Contenant",
+  "COC.category.mount" : "Monture",
   "COC.category.vehicle" : "Véhicule",
-  "COC.category.money" : "Monnaie",
+    
+  "COC.category.effects": "Effet",
   "COC.category.other": "Autre",
+
+  "COC.rarity.common" : "Common",
+  "COC.rarity.moderate" : "Moderate",
+  "COC.rarity.rare" : "Rare",
+  "COC.rarity.very-rare" : "Très rare",
+  "COC.rarity.unique" : "Unique",
+
+  "COC.ui.slot" : "Slot",
+  "COC.slot.hand":  "Hand",
+  "COC.slot.head" : "Head",
+  "COC.slot.ear" : "Ear",
+  "COC.slot.neck" : "Neck",
+  "COC.slot.shoulders" : "Shoulders",
+  "COC.slot.chest" : "Chest",
+  "COC.slot.back" : "Back",
+  "COC.slot.arm" : "Arm",
+  "COC.slot.finger" : "Finger",
+  "COC.slot.wrist" : "Wrist",
+  "COC.slot.waist" : "Waist",
+  "COC.slot.legs" : "Legs",
+  "COC.slot.feet" : "Feet",
+  "COC.slot.belt" : "Belt",
+  "COC.slot.backpack" : "Backpack",
+  "COC.slot.quiver" : "Quiver",
 
   "COC.properties.equipable" : "Équipable",
   "COC.properties.activable" : "Activable",
@@ -271,11 +316,20 @@
   "COC.properties.powder" : "Arme à feu",
   "COC.properties.throwing" : "Arme de lancer",
   "COC.properties.dr" : "Résistance aux dommages",
-  "COC.properties.effects" : "Effet persistant",
+  "COC.properties.sneak" : "Sneak",
+  "COC.properties.powerful" : "Powerful",
+  "COC.properties.critscience" : "Crit Science",
+  "COC.properties.specialization" : "Specialization",  
+  "COC.properties.effects" : "Effet magique",
+  "COC.properties.heal" : "Soin",
+  "COC.properties.buff" : "Amélioration",
+  "COC.properties.temporary" : "Temporaire",
+  "COC.properties.persistent" : "Persistant",
+  "COC.properties.spell" : "Sort",
   "COC.properties.13strmin" : "13 en FOR minimum",
   "COC.properties.bashing" : "DM temporaires possibles",
-  "COC.properties.spell" : "Sort",
   "COC.properties.proneshot" : "DM supp. si tir couché",
+  "COC.properties.sling" : "Sling",
   "COC.properties.salve" : "Arc de feu (L)",
 
   "COC.properties.profile" : "Profil",
@@ -295,9 +349,6 @@
   "COC.setting.espionnage" : "Espionnage",
   "COC.setting.surhumains" : "Surhumains",
   "COC.setting.cyberpunk" : "Cyberpunk",
-
-  "COC.notification.noCapacitySelected" : "Aucune capacité n'a été sélectionnée pour le moment",
-  "COC.notification.noPathSelected": "Aucune voie n'a été ajoutée pour le moment.",
 
   "COC.notification.MacroMultipleTokensSelected": "Vous avez sélectionné plusieurs tokens",
   "COC.notification.MacroNoActorAvailable": "Aucun acteur n'a pu être ciblé",
