--- a/lang/en.json
+++ b/lang/en.json
@@ -167,7 +167,7 @@
   "COC.stats.value.abbrev": "Value",
   "COC.stats.bonus.abbrev": "Bonus",
   "COC.stats.mod.abbrev" : "Mod",
-  "COC.stats.tmpmod.abbrev" : "Temp",
+  "COC.stats.tmpmod.abbrev" : "Mod Temp",
 
   "COC.stats.str.label" : "Strength",
   "COC.stats.str.abbrev" : "STR",
