Prise en compte limite Mains et Armure
- Ajout des properties slot et consumable
- Affichage du slot

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -286,23 +286,23 @@
   "COC.rarity.very-rare" : "Très rare",
   "COC.rarity.unique" : "Unique",
 
-  "COC.ui.slot" : "Slot",
-  "COC.slot.hand":  "Hand",
-  "COC.slot.head" : "Head",
-  "COC.slot.ear" : "Ear",
-  "COC.slot.neck" : "Neck",
-  "COC.slot.shoulders" : "Shoulders",
-  "COC.slot.chest" : "Chest",
-  "COC.slot.back" : "Back",
-  "COC.slot.arm" : "Arm",
-  "COC.slot.finger" : "Finger",
-  "COC.slot.wrist" : "Wrist",
-  "COC.slot.waist" : "Waist",
-  "COC.slot.legs" : "Legs",
-  "COC.slot.feet" : "Feet",
-  "COC.slot.belt" : "Belt",
-  "COC.slot.backpack" : "Backpack",
-  "COC.slot.quiver" : "Quiver",
+  "COC.ui.slot" : "Emplacement",
+  "COC.slot.hand":  "Main",
+  "COC.slot.head" : "Tête",
+  "COC.slot.ear" : "Oreille",
+  "COC.slot.neck" : "Cou",
+  "COC.slot.shoulders" : "Épaules",
+  "COC.slot.chest" : "Torse",
+  "COC.slot.back" : "Dos",
+  "COC.slot.arm" : "Bras",
+  "COC.slot.finger" : "Doigt",
+  "COC.slot.wrist" : "Poignet",
+  "COC.slot.waist" : "Taille",
+  "COC.slot.legs" : "Jambes",
+  "COC.slot.feet" : "Pieds",
+  "COC.slot.belt" : "À la ceinture",
+  "COC.slot.backpack" : "Sac-à-dos",
+  "COC.slot.quiver" : "Carquois",
 
   "COC.properties.equipable" : "Équipable",
   "COC.properties.activable" : "Activable",
