Mise à jour des clés et traduction des options

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -206,7 +206,7 @@
   "COC.attributes.xp.label": "Points de capacité",
   "COC.attributes.xp.abbrev": "CP",
   "COC.attributes.init.label": "Initiative",
-  "COC.attributes.init.abbrev": "INIT",
+  "COC.attributes.init.abbrev": "INITIATIVE",
   "COC.attributes.def.label": "Défense",
   "COC.attributes.def.abbrev": "DEF",
   "COC.attributes.level.label": "Niveau",
@@ -233,11 +233,11 @@
   "COC.weapons.bonus.abbrev" : "Bonus",
 
   "COC.attacks.melee.label": "Attaque de Contact",
-  "COC.attacks.melee.abbrev": "CONTACT",
+  "COC.attacks.melee.abbrev": "AU CONTACT",
   "COC.attacks.ranged.label": "Attaque à Distance",
-  "COC.attacks.ranged.abbrev": "DISTANCE",
+  "COC.attacks.ranged.abbrev": "A DISTANCE",
   "COC.attacks.magic.label": "Attaque Mentale",
-  "COC.attacks.magic.abbrev": "MAGIQUE",
+  "COC.attacks.magic.abbrev": "MENTALE",
 
   "COC.attributes.recovery.label": "RECUP",
   "COC.attributes.fortune.label": "CHANCE",
@@ -256,6 +256,15 @@
   "COC.attributes.dr.abbrev" : "RD",
   "COC.attributes.mad.label" : "Folie",
   "COC.attributes.mad.abbrev" : "PF",
+
+  "COC.currency.pp.label": "Platinium pieces",
+  "COC.currency.pp.abbrev": "PP",
+  "COC.currency.gp.label": "Gold pieces",
+  "COC.currency.gp.abbrev": "GP",
+  "COC.currency.sp.label": "Silver pieces",
+  "COC.currency.sp.abbrev": "SP",
+  "COC.currency.cp.label": "Copper pieces",
+  "COC.currency.cp.abbrev": "CP",
 
   "COC.category.item": "Objet",
   "COC.category.armor": "Armure",
@@ -327,7 +336,7 @@
   "COC.properties.sneak" : "Sneak",
   "COC.properties.powerful" : "Powerful",
   "COC.properties.critscience" : "Crit Science",
-  "COC.properties.specialization" : "Specialization",  
+  "COC.properties.specialization" : "Specialisation",  
   "COC.properties.effects" : "Effet",
   "COC.properties.heal" : "Soin",
   "COC.properties.buff" : "Amélioration",
@@ -342,10 +351,6 @@
   "COC.properties.consumable" : "Consommable",
 
   "COC.properties.profile" : "Profil",
-  "COC.properties.action" : "Action",
-  "COC.properties.adventure" : "Aventure",
-  "COC.properties.reflexion" : "Réflexion",
-
   "COC.properties.prestige" : "Prestige",
   "COC.properties.alternative" : "Alternative",
   "COC.properties.racial" : "Raciale",
@@ -374,5 +379,51 @@
   "COC.dialog.rollWeapon.title": "Jet d'attaque",
   "COC.dialog.rollDamage.title": "Jet de dommages",
   "COC.dialog.rollHitPoints.title": "Lancer les points de vie",
-  "COC.dialog.spendRecoveryPoint.title": "Dépenser un point de récupération"
+  "COC.dialog.spendRecoveryPoint.title": "Dépenser un point de récupération",
+
+  "SETTINGS.useRecovery.name": "Points de Récupération",
+  "SETTINGS.useRecovery.hint": "Utiliser la règle optionnelle des Points de Récupération (PR).",
+  "SETTINGS.useFortune.name": "Points de Chance",
+  "SETTINGS.useFortune.hint": "Utiliser la règle optionnelle des Points de Chance (PC).",
+  "SETTINGS.useMana.name": "Points de Mana",
+  "SETTINGS.useMana.hint": "Utiliser la règle optionnelle des Points de Mana (PM).",
+  "SETTINGS.useDamageResistance.name": "Résistance aux dommages",
+  "SETTINGS.useDamageResistance.hint": "Afficher la résistance aux dommages sur la feuille de personnage.",
+  "SETTINGS.displayDifficulty.name": "Afficher la difficulté",
+  "SETTINGS.displayDifficulty.hint": "Active l'affichage de la difficulté sur les jets de compétences/attributs et d'armes.",
+  "SETTINGS.displayDifficulty.none": "Ne pas utiliser ni afficher la difficulté",
+  "SETTINGS.displayDifficulty.all": "Utiliser la difficulté et l'afficher pour tout le monde",
+  "SETTINGS.displayDifficulty.gm": "Utiliser la difficulté et l'afficher uniquement au MJ",
+  "SETTINGS.useComboRolls.name": "Activer les jets combinés attaque et dommages",
+  "SETTINGS.useComboRolls.hint": "Permet de lancer les jets d'attaque et de dommages simultanément.",
+  "SETTINGS.useVarInit.name": "Utiliser la règle de l'initiative variable",
+  "SETTINGS.useVarInit.hint": "Le résultat d’un d6 explosif est ajouté à l'initiative : ajout et relance sur 6.",
+  "SETTINGS.useIncompetentPJ.name": "Utiliser la règle de l'incompétence des PJs",
+  "SETTINGS.useIncompetentPJ.hint": "Une arme ou une armure non maitrisée donne différents malus.",
+  "SETTINGS.useOverload.name": "Utiliser la règle de l'encombrement",
+  "SETTINGS.useOverload.hint": "L'encombrement de l'armure cause des malus pour les jets de DEX.",
+  "SETTINGS.displayChatDamageButtonsToAll.name": "Afficher les boutons de dommages",
+  "SETTINGS.displayChatDamageButtonsToAll.hint": "Affiche les boutons d'application des dommages dans les messages de chat à tout le monde.",
+  "SETTINGS.moveItem.name": "Mode de déplacement des objets",
+  "SETTINGS.moveItem.hint": "Comportement du drag & drop d'un objet sur une fiche de personnage (Maintenir MAJ lors du drop pour inverser).",
+  "SETTINGS.moveItem.copy": "Copier l'objet (par défaut dans Foundry)",
+  "SETTINGS.moveItem.move": "Déplacer l'objet",
+  "SETTINGS.lockItems.name": "Verrouiller les objets",
+  "SETTINGS.lockItems.hint": "Interdire aux joueurs de modifier les objets",
+  "SETTINGS.lockDuringPause.name": "Verrouillage pendant le mode Pause",
+  "SETTINGS.lockDuringPause.hint": "Interdire aux joueurs de modifier les personnages et les objets durant le mode Pause",
+  "SETTINGS.checkFreeHandsBeforeEquip.name": "Vérification des mains libres",
+  "SETTINGS.checkFreeHandsBeforeEquip.hint": "Vérifier que le personnage a assez de mains libres pour équiper un objet (Maintenir MAJ pour ignorer le contrôle)",
+  "SETTINGS.checkFreeHandsBeforeEquip.none": "Ne pas vérifier",
+  "SETTINGS.checkFreeHandsBeforeEquip.all": "Vérification (ignorable par tous)",
+  "SETTINGS.checkFreeHandsBeforeEquip.gm": "Vérification (ignorable uniquement par le MJ)",
+  "SETTINGS.checkArmorSlotAvailability.name": "Vérification des emplacements d'armure",
+  "SETTINGS.checkArmorSlotAvailability.hint": "Vérifier la disponibilité d'un emplacement avant d'équiper une armure (Maintenir MAJ pour ignorer le contrôle)",
+  "SETTINGS.checkArmorSlotAvailability.none": "Ne pas vérifier",
+  "SETTINGS.checkArmorSlotAvailability.all": "Vérification (ignorable par tous)",
+  "SETTINGS.checkArmorSlotAvailability.gm": "Vérification (ignorable uniquement par le MJ)",
+  "SETTINGS.explosiveDice.name": "Dé explosif pour les dommages",
+  "SETTINGS.explosiveDice.hint": "Si activée, les dommages utilisent la règle du dé explosif",
+  "SETTINGS.useMadness.name": "Points de Folie",
+  "SETTINGS.useMadness.hint": "Afficher les points de folie sur la fiche de personnage"
 }
