--- a/lang/fr.json
+++ b/lang/fr.json
@@ -62,7 +62,7 @@
   "COC.ui.activecaps" : "Capacités actives",
   "COC.ui.spell" : "Sort",
   "COC.ui.spellcasting" : "Incantation",
-  "COC.ui.sc" : "INCANT",
+  "COC.ui.sc" : "Carac Mentale",
   "COC.ui.limited" : "Action limitée",
   "COC.ui.summary" : "Résumé",
   "COC.ui.description" : "Description",
