--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+### Version 9.269.2
+FONCTIONNALITES
+- Ajout de l'option initiative variable
+- Ajout de l'option Setting Cyberpunk
+- Prise en compte du setting Cyberpunk pour les points de Cash
+
 ### Version 9.269.1
 CORRECTIFS
 - Bonus sur les attaques qui apparait deux fois dans la fenêtre de dialogue
