Ajout du clic gauche pour ouvrir directement un trait ou un profil depuis la fiche de personnage

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+### Version 9.269.4
+FONCTIONNALITES
+- Ajout du clic gauche pour ouvrir directement un trait ou un profil depuis la fiche de personnage
+
 ### Version 9.269.3
 CORRECTIFS
 - Correction de l'affichage de la difficulté dans le chat des joueurs
